searxng/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng-service
  labels:
    app.kubernetes.io/instance: searxng
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: searxng
    app.kubernetes.io/version: latest
    helm.sh/chart: searxng-1.0.0
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/instance: searxng
