searxng/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: searxng-service

spec:
  ingressClassName: caddy
  rules:
  - host: search.vaporwav.in
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: searxng
            port: 
              number: 8080
